# noscroll

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
automation/: .env.example  README.md  __init__.py  __main__.py  agents.py  config.py  latest  loop.py
automation/adapters/: __init__.py
automation/evals/: __init__.py
automation/prompts/: diagnostic.txt  executor.txt  fixer.txt
automation/tasks/: __init__.py
prompts/: system.txt
skills/noscroll/: SKILL.md
skills/noscroll/references/: env.md
src/noscroll/: __init__.py  __main__.py  cli.py  config.py  crawler.py  duration.py  fetch.py  hackernews.py  llm.py  models.py  opml.py  rss.py  runner.py  utils.py
src/noscroll/sources/: crawler.py  fetch.py  hackernews.py  opml.py  providers.py  rss.py  x.py
subscriptions/: subscriptions.toml
tests/: test_cli.py  test_cli_skills.py  test_config.py  test_duration.py  test_hackernews.py  test_llm.py  test_opml.py  test_rss.py  test_runner.py  test_utils.py
tests/integration/: __init__.py  conftest.py  test_cli_config.py  test_cli_run.py  test_real_run.py
